refactor(certificaciones): ordenar de más reciente a más antiguo

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         dentro de un flujo orientado a entrega continua.
                     </p>
                     <p>
-                        Aporto <strong>visión de gestión y liderazgo de equipos</strong> 
-                        desarrollada en trayectorias previas, complementada con 
+                        Aporto <strong>visión de gestión y liderazgo de equipos</strong>
+                        desarrollada en trayectorias previas, complementada con
                         <strong>formación técnica intensiva en backend y cloud</strong>.
                     </p>
                 </div>
@@ -182,22 +182,10 @@
                     <span class="cert-date">Sept 2025</span>
                 </div>
                 <div class="cert-card">
-                    <div class="cert-icon">🚀</div>
-                    <h3>Desarrollo de APIs en Java con Spring Boot</h3>
-                    <p>TodoCode</p>
-                    <span class="cert-date">Abr 2024</span>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">🔐</div>
-                    <h3>Seguridad con Spring Security</h3>
-                    <p>TodoCode</p>
-                    <span class="cert-date">Oct 2024</span>
-                </div>
-                <div class="cert-card">
-                    <div class="cert-icon">☕</div>
-                    <h3>Bootcamp de Java Avanzado</h3>
-                    <p>Código Facilito</p>
-                    <span class="cert-date">Abr 2025</span>
+                    <div class="cert-icon">🎓</div>
+                    <h3>Programa ONE Tech Foundation G8 - Back End</h3>
+                    <p>Alura Latam</p>
+                    <span class="cert-date">Jul 2025</span>
                 </div>
                 <div class="cert-card">
                     <div class="cert-icon">🎯</div>
@@ -206,10 +194,22 @@
                     <span class="cert-date">Jun 2025</span>
                 </div>
                 <div class="cert-card">
-                    <div class="cert-icon">🎓</div>
-                    <h3>Programa ONE Tech Foundation G8 - Back End</h3>
-                    <p>Alura Latam</p>
-                    <span class="cert-date">Jul 2025</span>
+                    <div class="cert-icon">☕</div>
+                    <h3>Bootcamp de Java Avanzado</h3>
+                    <p>Código Facilito</p>
+                    <span class="cert-date">Abr 2025</span>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">🔐</div>
+                    <h3>Seguridad con Spring Security</h3>
+                    <p>TodoCode</p>
+                    <span class="cert-date">Oct 2024</span>
+                </div>
+                <div class="cert-card">
+                    <div class="cert-icon">🚀</div>
+                    <h3>Desarrollo de APIs en Java con Spring Boot</h3>
+                    <p>TodoCode</p>
+                    <span class="cert-date">Abr 2024</span>
                 </div>
                 <div class="cert-card">
                     <div class="cert-icon">📦</div>
@@ -237,28 +237,28 @@
             </div>
             <div class="certifications-grid complementary">
                 <div class="cert-card secondary">
-                    <div class="cert-icon">⛓️</div>
-                    <h3>Curso de Blockchain</h3>
-                    <p>Universidad Blas Pascal</p>
-                    <span class="cert-date">May 2025</span>
-                </div>
-                <div class="cert-card secondary">
                     <div class="cert-icon">💎</div>
                     <h3>Ethereum Developer Pack - Talento Tech & ETH KIPU</h3>
                     <p>Ministerio de Educación CABA</p>
                     <span class="cert-date">Ago 2025 - Ago 2027</span>
                 </div>
                 <div class="cert-card secondary">
-                    <div class="cert-icon">💾</div>
-                    <h3>Big Data (Ciencia de Datos)</h3>
-                    <p>Codo a Codo 4.0 - Buenos Aires</p>
-                    <span class="cert-date">Ene 2023</span>
+                    <div class="cert-icon">⛓️</div>
+                    <h3>Curso de Blockchain</h3>
+                    <p>Universidad Blas Pascal</p>
+                    <span class="cert-date">May 2025</span>
                 </div>
                 <div class="cert-card secondary">
                     <div class="cert-icon">🐍</div>
                     <h3>Procesamiento de datos con Python</h3>
                     <p>Ticmas</p>
                     <span class="cert-date">Ago 2023</span>
+                </div>
+                <div class="cert-card secondary">
+                    <div class="cert-icon">💾</div>
+                    <h3>Big Data (Ciencia de Datos)</h3>
+                    <p>Codo a Codo 4.0 - Buenos Aires</p>
+                    <span class="cert-date">Ene 2023</span>
                 </div>
                 <div class="cert-card secondary">
                     <div class="cert-icon">📈</div>
@@ -387,7 +387,8 @@
         <div class="container">
             <div class="section-header">
                 <span class="section-tag">04 / Proyectos</span>
-                <h2 class="section-title">Construyendo el <span class="gradient-text">futuro</span><br>un proyecto a la vez</h2>
+                <h2 class="section-title">Construyendo el <span class="gradient-text">futuro</span><br>un proyecto a la
+                    vez</h2>
             </div>
             <div class="projects-grid">
                 <!-- Ordinex -->
@@ -403,13 +404,14 @@
                             </div>
                         </div>
                         <p class="project-description">
-                            Sistema de gestión de órdenes de trabajo orientado a empresas de servicios técnicos. 
-                            Arquitectura completa: diseño de base de datos, API REST con Spring Boot, 
+                            Sistema de gestión de órdenes de trabajo orientado a empresas de servicios técnicos.
+                            Arquitectura completa: diseño de base de datos, API REST con Spring Boot,
                             autenticación JWT, autorización basada en roles, y deploy en Oracle Cloud Infrastructure.
                         </p>
                         <div class="demo-credentials">
                             <div class="credentials-header">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
                                     <circle cx="12" cy="12" r="10"></circle>
                                     <path d="M12 16v-4"></path>
                                     <path d="M12 8h.01"></path>
@@ -437,15 +439,18 @@
                             <span>OCI</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://ordinex-tau.vercel.app/" target="_blank" rel="noopener" class="project-link demo-link">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <a href="https://ordinex-tau.vercel.app/" target="_blank" rel="noopener"
+                                class="project-link demo-link">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
                                     <circle cx="12" cy="12" r="10"></circle>
                                     <polygon points="10 8 16 12 10 16 10 8"></polygon>
                                 </svg>
                                 Ver Demo
                             </a>
                             <a href="#contact" class="project-link contact-link">
-                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
                                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                                 </svg>
                                 Consultar
